Update and rename PBW2020-Pertemuan 3-Kelas E/Index.html to PPBW2020-Pertemuan3-E/Index.html

--- a/PPBW2020-Pertemuan3-E/Index.html
+++ b/PPBW2020-Pertemuan3-E/Index.html
@@ -3,7 +3,7 @@
 
 	<head>
 	<!-- Tag <head> berfungsi untuk menyimpan informasi dari sebuah halaman-->
-		<title>PBW2020-Pertemuan 3-Kelas E</title>
+		<title>PPBW2020-Pertemuan3-E</title>
 		<!-- Tag <title> berfungsi untuk judul dari sebuah halaman-->
 	</head>
 
